fix: toList()和isEmpty()方法兼容性问题